# Odop-platform

./: RENDER_DEPLOYMENT_GUIDE.md
odop-backend/: .env.example  .gitignore  build.sh  main.py  pyproject.toml  requirements.txt
odop-backend/api/: serializers.py  urls.py  views.py
odop-backend/config/: settings.py  urls.py
odop-backend/products/: models.py
odop-backend/products/management/commands/: import_data.py
odop-backend/products/migrations/: 0001_initial.py
odop-frontend/: .env  .env.example  FIXES_APPLIED.md  IMAGE_LOADING_FIX.md  OPTIMIZATION_SUMMARY.md  PAGINATION_FIX.md  README_COMPONENTS.md  package-lock.json  package.json  tailwind.config.js
odop-frontend/public/: index.html  manifest.json
odop-frontend/src/: App.js  index.css
odop-frontend/src/components/: FeaturedStates.js  Footer.js  Header.js  IndiaMap.js  IndiaMapD3.js  IndiaMapD3Fixed.js  IndiaMapImproved.js  ProductCard.js  ProductGrid.js  ProductModal.js
odop-frontend/src/components/ui/: AnimatedIcons.js
odop-frontend/src/services/: api.js
